# cpp-gtest-example

./: CMakeLists.txt  main.cpp  rational.h  test.cpp
